# Custom-OneCycleLr-Pytorch

./: README.md  pyproject.toml
examples/: vis.py
src/custom_onecyclelr/: scheduler.py
tests/: test_scheduler.py  utils.py
