[project]
name = "custom-onecyclelr"
version = "0.1.0"
description = "A Custom PyTorch implementation of the OneCycleLR learning rate scheduler. (With some modifications)"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "AidinHamedi", email = "aidin.hamediasl@gmail.com" }]
requires-python = ">=3.10, <4.0"
keywords = [
    "pytorch",
    "deep-learning",
    "optimizer",
    "lr scheduler",
    "OneCycleLR",
]
dynamic = ["classifiers"]

[tool.poetry.dependencies]
torch = { version = ">=2.0", source = "torch" }

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[project.urls]
homepage = "https://github.com/AidinHamedi/Custom-OneCycleLr-Pytorch"
repository = "https://github.com/AidinHamedi/Custom-OneCycleLr-Pytorch"

[tool.poetry]
packages = [{ include = "custom_onecyclelr", from = "src" }]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
isort = "^6.0.1"
ruff = "^0.11.0"

[tool.poetry.group.doc.dependencies]
matplotlib = "^3.10.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
